# fastapi-movie-api

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
logs/: app.json
src/: main.py  seed_movies.py
src/app/api/auth/: auth.py
src/app/api/routes/: categories_routes.py  movies_routes.py  profiles_routes.py  router.py
src/app/api/schemas/: categories_schemas.py  movies_schemas.py  profiles_schemas.py
src/app/application/categories/: categories_service.py
src/app/application/movies/: movie_service.py
src/app/application/profiles/: profile_service.py
src/app/core/: firebase.py  logger.py
src/app/domain/: interfaces.py
src/app/infrastructure/: categories_firestore_repo.py  movies_firestore_repo.py  profiles_firestore_repo.py
tests/: test_movie_service.py
