[project]
name = "backend-python"
version = "0.1.0"
description = "Backend para Clone Ingresso.com"
authors = [
    {name = "Italo Rodri Dev", email = "italorodridev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "firebase-admin>=6.4.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[tool.poetry.scripts]
dev = "uvicorn.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
